home-cluster/local-services/service-zb.yaml
---
# Service for Zigbee (with Endpoints pointing to external IP)
apiVersion: v1
kind: Service
metadata:
  name: zb-local
  namespace: local-services
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: zb-local
  namespace: local-services
subsets:
- addresses:
  - ip: 192.168.1.36
  ports:
  - port: 80
    protocol: TCP
