home-cluster/local-services/ingress-zb.yaml
---
# Ingress for Zigbee (zb)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zb
  namespace: local-services
  annotations:
    external-dns.alpha.kubernetes.io/hostname: zb.stevearnett.com
    external-dns.alpha.kubernetes.io/target: kube.stevearnett.com
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - zb.stevearnett.com
  rules:
  - host: zb.stevearnett.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zb-local
            port:
              number: 80
